Fixed homescreen issues on smaller screens

--- a/static/styles.css
+++ b/static/styles.css
@@ -10,6 +10,7 @@ body {
     padding: 0;
     position: relative;
     color: #1E1E1E;
+    font-size: 14px;
 }
 
 button, a {
